--- a/unit-conf.json.template
+++ b/unit-conf.json.template
@@ -14,6 +14,8 @@
     "applications": {
         "wordpress": {
             "type": "php",
+            "user": "appuser",
+            "group": "appuser",
             "limits": {
                 "requests": 300
             },
