update config for unit 1.29+

--- a/unit-conf.json.template
+++ b/unit-conf.json.template
@@ -64,7 +64,7 @@
         },
         {
             "action": {
-                "share": "/site",
+                "share": "/site$uri",
                 "fallback": {
                     "pass": "applications/wordpress/index"
                 }
